# VLA_Arm_Controller

./: .gitignore  .gitmodules  README.md  collision_detection_agent.py  initialize_arm.py  module_data.csv  path_planner.py  requirements.txt  robot_comms_for_sim_ur3.py  robot_comms_for_ur_sim.py  robot_communication.py  robot_controller.py  robot_initializer.py  test_robot_communication.py  ur5e_collision.urdf
.devcontainer/: Dockerfile  devcontainer.json
Simulator_Assets/: car-tutorial.usd  ur5e_base.usd  ur5e_from_urdf.usd  ur5e_from_urdf_script.usda  ur5e_og_script.usda
model_training/: Xvla_widowx_vis_traj.ipynb  train_pi0_ur5_colab_031026.ipynb
python_controllers_for_ursim/: collision_detection_agent.py  grex_location_data.csv  path_planner.py  robot_comms_for_ur_sim.py  robot_controller.py  robot_initializer.py
setup_scripts/: fastdds_isaac_bridge.xml  fastdds_windows_side.xml  ros2_isaac_env.sh  windows-sim-startup.ps1
src/: module_data.csv  path_planner.py  robot_communication.py  robot_controller.py
src/vla_controller/: package.xml  setup.cfg  setup.py
src/vla_controller/config/: vla_params.yaml
src/vla_controller/launch/: vla.launch.py  vla_system.launch.py
src/vla_controller/resource/: vla_controller
src/vla_controller/vla_controller/: vla_controller_node.py
thoughts/: Debugging ROS2 Isaac Sim Controller Pipeline 030326.md  Integrating IsaacSim ROS2 Jazzy Workspace 022226.md  Porting URSim to ROS2 and Gazebo 022126.md  UR5e pi0 Finetuning Pipeline 030926.md  VLA Integration Plan for UR5e Isaac Sim 030826.md
urdf/: ur5e_model.urdf  (+2 more)
(+25 files in other folders)
